[metadata]
author = geocube Contributors
author_email = alansnow21@gmail.com
name = geocube
version = attr: geocube.__version__
description = Tool to convert geopandas vector data into rasterized xarray data.
keywords = geocube, GDAL, rasterize, vector
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD license
license_files = LICENSE
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: GIS
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
url = https://github.com/corteva/geocube
download_url = http://python.org/pypi/geocube

[options]
packages = find:
zip_safe = False # https://mypy.readthedocs.io/en/stable/installed_packages.html
include_package_data = True
python_requires = >=3.8
install_requires =
    appdirs
    click>=6.0
    geopandas>=0.7
    odc_geo
    rasterio
    rioxarray>=0.4
    scipy
    xarray>=0.17
    pyproj>=2
    numpy>=1.20

[options.packages.find]
include = geocube*

[options.package_data]
geocube =
    py.typed

[options.entry_points]
console_scripts =
    geocube = geocube.cli.geocube:geocube

[options.extras_require]
doc =
    sphinx-click
    nbsphinx
    sphinx_rtd_theme
test =
    pytest>=3.6
    pytest-cov
    packaging
    netcdf4
dev =
    %(doc)s
    %(test)s
    pylint
    mypy
    pre-commit
all =
    %(doc)s
    %(test)s
    %(dev)s
